# internal/features/shortener/dtos.go
@@ -1,8 +1,9 @@
 package shortener
 
 type ShortenRequest struct {
-	UserID uint   `json:"user_id" validate:"required,numeric,min=1"`
-	Url    string `json:"original_url" validate:"required,url"`
+	UserID         uint    `json:"user_id" validate:"required,numeric,min=1"`
+	Url            string  `json:"original_url" validate:"required,url"`
+	CustomShortUrl *string `json:"custom_short_url,omitempty" validate:"max=8,omitempty"`
 }
 type ShortenResponse struct {
 	Id          uint   `json:"id"`
