# internal/features/user/models.go
@@ -9,11 +9,12 @@ import (
 )
 
 type UserModel struct {
-	ID        types.UserId `gorm:"primaryKey"`
-	CreatedAt time.Time
-	UpdatedAt time.Time
-	DeletedAt gorm.DeletedAt         `gorm:"index"`
-	UserName  string                 `validate:"required,min=3,max=30"`
-	Email     string                 `validate:"required,email"`
-	Shorts    []shortener.ShortModel `gorm:"foreignKey:UserID" validate:"dive"`
+	ID           types.UserId `gorm:"primaryKey"`
+	CreatedAt    time.Time
+	UpdatedAt    time.Time
+	DeletedAt    gorm.DeletedAt         `gorm:"index"`
+	UserName     string                 `validate:"required,min=3,max=30"`
+	Email        string                 `validate:"required,email"`
+	PasswordHash string                 `validate:"required"`
+	Shorts       []shortener.ShortModel `gorm:"foreignKey:UserID" validate:"dive"`
 }
